--- a/BusBookingUI-Android/app/src/main/res/layout/activity_payment.xml
+++ b/BusBookingUI-Android/app/src/main/res/layout/activity_payment.xml
@@ -25,13 +25,14 @@
                 android:layout_height="wrap_content"
                 android:layout_marginRight="16dp">
 
-                <ImageView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:layout_alignParentEnd="true"
-                    android:layout_alignParentTop="true"
-                    android:src="@drawable/ic_person_outline_white_24dp" />
-
+                <TextView
+                    android:id="@+id/textView5"
+                    android:layout_width="match_parent"
+                    android:layout_height="45dp"
+                    android:text="Payment "
+                    android:textAlignment="center"
+                    android:textSize="30sp"
+                    android:textStyle="bold" />
             </RelativeLayout>
 
         </android.support.v7.widget.Toolbar>
@@ -60,33 +61,8 @@
                     <ImageView
                         android:layout_width="match_parent"
                         android:layout_height="260dp"
-                        android:scaleType="centerCrop"
-                        android:src="@drawable/bus_image_1" />
 
-                    <TextView
-                        android:id="@+id/textView"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_alignParentTop="true"
-                        android:layout_centerHorizontal="true"
-                        android:layout_marginTop="16dp"
-                        android:fontFamily="@font/print_clearly"
-                        android:text="Hey Traveller!"
-                        android:textAlignment="center"
-                        android:textColor="#FFFFFF"
-                        android:textSize="32sp" />
-
-                    <TextView
-                        android:id="@+id/textView2"
-                        android:layout_width="match_parent"
-                        android:layout_height="wrap_content"
-                        android:layout_below="@+id/textView"
-                        android:layout_marginTop="8dp"
-                        android:fontFamily="@font/gotham"
-                        android:text="Where you want to go."
-                        android:textAlignment="center"
-                        android:textColor="#FFFFFF"
-                        android:textSize="18sp" />
+                        android:src="@drawable/atm" />
 
                 </RelativeLayout>
 
@@ -113,30 +89,14 @@
                             android:layout_marginBottom="8dp"
                             android:textColorHint="#FF8A99AF">
 
-                            <AutoCompleteTextView
-                                android:id="@+id/destination"
+                            <EditText
+                                android:id="@+id/cname"
                                 android:layout_width="match_parent"
                                 android:layout_height="wrap_content"
                                 android:layout_weight="1"
-                                android:completionHint="Destination"
-                                android:drawableStart="@drawable/ic_location_on_light_blue_24dp"
-                                android:hint="Destination" />
-                        </android.support.design.widget.TextInputLayout>
-
-                        <android.support.design.widget.TextInputLayout
-                            android:layout_width="match_parent"
-                            android:layout_height="wrap_content"
-                            android:layout_marginBottom="8dp"
-                            android:textColorHint="#FF8A99AF">
-
-                            <AutoCompleteTextView
-                                android:id="@+id/src"
-                                android:layout_width="match_parent"
-                                android:layout_height="wrap_content"
-                                android:layout_weight="1"
-                                android:completionHint="Source"
-                                android:drawableStart="@drawable/ic_location_on_light_blue_24dp"
-                                android:hint="Source" />
+                                android:ems="10"
+                                android:hint="Card Holder's Name"
+                                android:inputType="textPersonName" />
                         </android.support.design.widget.TextInputLayout>
 
                         <android.support.design.widget.TextInputLayout
@@ -146,17 +106,34 @@
                             android:textColorHint="#FF8A99AF">
 
                             <EditText
-                                android:id="@+id/inp_date"
+                                android:id="@+id/cno"
                                 android:layout_width="match_parent"
-                                android:layout_height="match_parent"
-                                android:drawableStart="@drawable/ic_date_range_light_blue_24dp"
-                                android:drawablePadding="16dp"
-                                android:fontFamily="@font/calibri"
-                                android:hint="Select Date(dd/mm/yyyy)"
-                                android:inputType="date"
-                                android:maxLines="1"
-                                android:textColor="@android:color/black"
-                                android:textSize="16sp" />
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:digits="0123456789"
+                                android:ems="10"
+                                android:hint="16-digit Card number"
+                                android:inputType="numberSigned"
+                                android:maxLength="16" />
+
+                        </android.support.design.widget.TextInputLayout>
+
+                        <android.support.design.widget.TextInputLayout
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:layout_marginBottom="8dp"
+                            android:textColorHint="#FF8A99AF">
+
+                            <EditText
+                                android:id="@+id/exp_date"
+                                android:layout_width="match_parent"
+                                android:layout_height="wrap_content"
+                                android:layout_weight="1"
+                                android:digits="0123456789/"
+                                android:ems="10"
+                                android:hint="Expiry Date(mm/yy)"
+                                android:maxLength="5"
+                                android:inputType="date" />
                         </android.support.design.widget.TextInputLayout>
 
                     </LinearLayout>
@@ -165,18 +142,19 @@
 
 
                 <Button
-                    android:id="@+id/search_buses"
+
+                    android:id="@+id/go"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
                     android:layout_gravity="center"
                     android:layout_margin="16dp"
                     android:background="@drawable/buttonshape"
                     android:fontFamily="@font/calibri"
-                    android:text="Search Buses"
+                    android:text="Confirm Payment"
                     android:textAllCaps="false"
-                    android:textStyle="bold"
                     android:textColor="#ffffff"
-                    android:textSize="18sp" />
+                    android:textSize="18sp"
+                    android:textStyle="bold" />
             </LinearLayout>
 
 
